--- a/components/card/card.module.css
+++ b/components/card/card.module.css
@@ -16,8 +16,12 @@
   padding-bottom: 1.25rem /* 20px */;
   padding-left: 1rem /* 16px */;
   padding-right: 1rem /* 16px */;
-
+  
   backdrop-filter: blur(10px);
+  
+}
+.container:hover{
+  cursor: pointer;
 }
 
 .cardHeaderWrapper {
@@ -37,10 +41,13 @@
 
 .cardImageWrapper {
   color: var(--text-white-100);
+  display: grid;
+  place-items: center;
 }
 
 .cardImage {
   border-radius: 0.75rem /* 12px */;
+
 }
 
 @media (min-width: 1024px) {
